<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/buttonSignout"
        style="@style/FirebaseUI.Button.AccountChooser.FacebookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:text="@string/button_logout" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/buttonSend"
        android:hint="@string/message_hint" />

    <Button
        android:id="@+id/buttonSend"
        style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:text="@string/button_send" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText"
        android:layout_below="@+id/buttonSignout"
        android:layout_alignParentStart="true"></ListView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonSignout"
        android:layout_marginEnd="45dp"
        android:layout_toStartOf="@+id/buttonSend"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Annonytter"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />


</RelativeLayout>